class PracticeQuestion {
  final int id;
  final String questionId;
  final String section; // 'Speaking' or 'Writing'
  final String prompt;
  final String taskType;

  String? userAnswer; // To store user answer locally

  PracticeQuestion({
...
